<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout"
        tools:context=".view.detail.DetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="32dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/detail_match_date"
                    style="@style/TextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="88dp"
                            android:scaleType="centerInside"
                            android:id="@+id/detail_match_home_badge"
                            android:padding="8dp"
                            android:maxHeight="64dp"
                            android:contentDescription="@string/home_logo_badge"
                    />

                    <TextView
                            android:id="@+id/detail_match_home"
                            style="@style/TextClubName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/dummy_home_team" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/detail_match_home_score"
                            style="@style/TextScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_score_home" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:text="@string/vs"
                            android:textSize="18sp" />

                    <TextView
                            android:id="@+id/detail_match_away_score"
                            style="@style/TextScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_score_away"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="88dp"
                            android:scaleType="centerInside"
                            android:id="@+id/detail_match_away_badge"
                            android:padding="8dp"
                            android:contentDescription="@string/away_logo_badge"
                    />

                    <TextView
                            android:id="@+id/detail_match_away"
                            style="@style/TextClubName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/dummy_away_team"
                            android:maxHeight="64dp"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/separator" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:id="@+id/detail_match_home_goals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc" />

            <TextView
                    style="@style/TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/goals" />

            <TextView
                    android:id="@+id/detail_match_away_goals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc"
                    android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:id="@+id/detail_match_home_shots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_score_home" />

            <TextView
                    style="@style/TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/shots" />

            <TextView
                    android:id="@+id/detail_match_away_shots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_score_away"
                    android:textAlignment="textEnd" />

        </LinearLayout>

        <include layout="@layout/separator" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lineups"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#444"
                android:textSize="16sp"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:id="@+id/detail_match_home_goal_keeper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short" />

            <TextView
                    style="@style/TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/goal_keeper" />

            <TextView
                    android:id="@+id/detail_match_away_goal_keeper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short"
                    android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:id="@+id/detail_match_home_defense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short" />

            <TextView
                    style="@style/TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/defense" />

            <TextView
                    android:id="@+id/detail_match_away_defense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short"
                    android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:id="@+id/detail_match_home_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short" />

            <TextView
                    style="@style/TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/midfield" />

            <TextView
                    android:id="@+id/detail_match_away_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short"
                    android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:id="@+id/detail_match_home_forward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short" />

            <TextView
                    style="@style/TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/forward" />

            <TextView
                    android:id="@+id/detail_match_away_forward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short"
                    android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:id="@+id/detail_match_home_substitutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short" />

            <TextView
                    style="@style/TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/substitutes" />

            <TextView
                    android:id="@+id/detail_match_away_substitutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dummy_desc_short"
                    android:textAlignment="textEnd" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>